--- a/defconfig/baili.config
+++ b/defconfig/baili.config
@@ -7205,7 +7205,7 @@ CONFIG_PACKAGE_6in4=y
 # CONFIG_PACKAGE_batctl-full is not set
 # CONFIG_PACKAGE_batctl-tiny is not set
 # CONFIG_PACKAGE_beanstalkd is not set
-# CONFIG_PACKAGE_bmon is not set
+CONFIG_PACKAGE_bmon=y
 # CONFIG_PACKAGE_boinc is not set
 # CONFIG_PACKAGE_bpftool-full is not set
 # CONFIG_PACKAGE_bpftool-minimal is not set
